# auto-podcast

./: .env.example  .gitignore  .python-version  APP_PASSWORD_SETUP.md  CLAUDE.md  OAUTH_SETUP.md  README.md  Zq 2>&1 || echo Generating  auth_helper.py  cleanup_episodes.py  config.py  content_manager.py  debug_chrome_minimal.py  debug_chrome_verbose.py  deep_podcast_generator.py  deep_script_generator.py  elevenlabs_alternative.py  feed.xml  feed_deep.xml  firefox_automation.py  generate_cover.py  generate_cover_deep.py  index.html  local_tts_alternative.py  multi_browser_automation.py  notebooklm_automation.py  oauth_automation.py  oauth_setup.py  podcast_generator.py  podcast_uploader.py  pyproject.toml  requirements.txt  rss_feed_generator.py  script_generator.py  script_reviewer.py  setup_auth.py  system_overview.html  system_overview.md  test_notebook_lm.py  tts_alternative.py  (+2 more)
.github/workflows/: debug_chrome.yml  generate-podcast.yml  generate_podcast.yml
docs/: CRD.md  HLD.md  LLD.md
