[project]
name = "auto-podcast"
version = "0.1.0"
description = "Gemini AIで自動生成するポッドキャストシステム"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "feedparser>=6.0.10",
    "python-dotenv>=1.0.0",
    "pydub>=0.25.1",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
]
